# tars-conversation-app

./: .gitignore  CLAUDE.md  GRADIO_UI_WORKING.md  LICENSE  PROACTIVE_MONITOR_TESTING_CHECKLIST.md  README.md  README_WEB.md  SUBMISSION.md  TESTING_GRADIO_INTEGRATION.md  app.json  app.py  bot.py  character.json  config.ini  config.ini.example  env.example  env_template.txt  fix_video_codec.sh  index.html  install.sh  loggers.py  manifest.json  package-lock.json  package.json  pipecat_service.py  preview-landing.sh  publish-to-hf.sh  pyproject.toml  qwen3_omni_openai_stream.py  requirements.txt  server.js  start_robot_mode.sh  tars_bot.py  test_emotional_monitor.py  test_server_connection.py  tsconfig.json
app/: globals.css  layout.tsx  page.module.css  page.tsx
character/: persona.ini  prompts.py
chroma_memory/: chroma.sqlite3
config/: __init__.py
crossword/: index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DAEMON_INTEGRATION.md  DEVELOPING_APPS.md  INSTALLATION_GUIDE.md  MEMORY.md  PERSONA.md  RUN.md  final_run_checklist.md  interruption_parroting_checklist.md
landing/: index.html  package.json  tailwind.config.js
lib/: voice-server.ts
logs/: proactive_interventions.jsonl
memory/: __init__.py  mem0_client.py
modules/: module_audio.py  module_tools.py
notes/: RASPBERRY_PI_CLIENT.md  SETUP_MACBOOK_SERVER.md
observers/: __init__.py  assistant_observer.py  debug_observer.py  display_events_observer.py  metrics_observer.py  transcription_observer.py  vision_observer.py
processors/: __init__.py  assistant_logger.py  (+9 more)
(+172 files in other folders)
